--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -19,6 +19,7 @@ library
   exposed-modules: Network.CoAP
   other-modules:   Network.CoAP.Message
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.6 && <4.7,
+                       bytestring
   hs-source-dirs:      src
   default-language:    Haskell2010
