--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -20,6 +20,7 @@ library
   other-modules:   Network.CoAP.Message
   -- other-extensions:
   build-depends:       base,
-                       bytestring
+                       bytestring,
+                       binary
   hs-source-dirs:      src
   default-language:    Haskell2010
