--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -22,6 +22,7 @@ library
   build-depends:       base,
                        bytestring,
                        binary,
-                       network
+                       network,
+                       mtl
   hs-source-dirs:      src
   default-language:    Haskell2010
