--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -26,3 +26,12 @@ library
                        mtl
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+executable hcoap-hello-server
+  hs-source-dirs:      hello-server
+  main-is:             Main.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base,
+                       network,
+                       hcoap
+  default-language:    Haskell2010
