--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -33,5 +33,6 @@ executable hcoap-hello-server
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base,
                        network,
+                       bytestring,
                        hcoap
   default-language:    Haskell2010
