--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -34,5 +34,6 @@ executable hcoap-hello-server
   build-depends:       base,
                        network,
                        bytestring,
+                       binary,
                        hcoap
   default-language:    Haskell2010
