--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -10,10 +10,9 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules: Network.CoAP
-  other-modules:   Network.CoAP.Message, Network.CoAP.MessageCodec, Network.CoAP.Messaging,
-                   Network.CoAP.Request, Network.CoAP.Response, Network.CoAP.Options,
-                   Network.CoAP.Payload, Network.CoAP.Endpoint
+  exposed-modules: Network.CoAP, Network.CoAP.Message, Network.CoAP.MessageCodec,
+                   Network.CoAP.Messaging, Network.CoAP.Request, Network.CoAP.Response,
+                   Network.CoAP.Options, Network.CoAP.Payload, Network.CoAP.Endpoint
   build-depends:       base,
                        bytestring,
                        binary,
@@ -21,6 +20,17 @@ library
                        mtl
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite hcoap-test
+  type:             exitcode-stdio-1.0
+  hs-source-dirs:   test
+  main-is:          Spec.hs
+  build-depends:    base,
+                    hcoap,
+                    QuickCheck,
+                    HUnit
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  default-language: Haskell2010
 
 executable hcoap-example-server
   hs-source-dirs:      example-server
