--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -28,7 +28,8 @@ test-suite hcoap-test
   build-depends:    base,
                     hcoap,
                     QuickCheck,
-                    HUnit
+                    HUnit,
+                    bytestring
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
 
