--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -17,6 +17,7 @@ library
                        bytestring,
                        binary,
                        network,
+                       stm,
                        mtl
   hs-source-dirs:      src
   default-language:    Haskell2010
