--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -18,7 +18,8 @@ library
                        binary,
                        network,
                        stm,
-                       mtl
+                       mtl,
+                       time
   hs-source-dirs:      src
   default-language:    Haskell2010
 
