--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -19,7 +19,8 @@ library
                        network,
                        stm,
                        mtl,
-                       time
+                       time,
+                       random
   hs-source-dirs:      src
   default-language:    Haskell2010
 
