--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -30,8 +30,10 @@ test-suite hcoap-test
   main-is:          Spec.hs
   build-depends:    base,
                     hcoap,
+                    network,
                     QuickCheck,
                     HUnit,
+                    random,
                     bytestring
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
