--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -20,7 +20,8 @@ library
                        stm,
                        mtl,
                        time,
-                       random
+                       random,
+                       async
   hs-source-dirs:      src
   default-language:    Haskell2010
 
