--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -7,6 +7,13 @@ author:              Ulf Lilleengen
 maintainer:          ulf.lilleengen@gmail.com
 category:            Network
 build-type:          Simple
+homepage:            https://github.com/lulf/hcoap
+description:         CoAP library for writing CoAP clients, servers or just for decoding and encoding
+                     CoAP messages. The Network.CoAP.Server and Network.CoAP.Client modules allows
+                     building CoAP servers and clients on top of a messaging layer which provides
+                     reliable transport of CoAP requests/responses.
+synopsis:            CoAP implementation for Haskell.
+stability:           experimental
 cabal-version:       >=1.10
 
 library
