--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -20,15 +20,15 @@ library
   exposed-modules: Network.CoAP.Server, Network.CoAP.Client, Network.CoAP.Message, Network.CoAP.Transport
   other-modules: Network.CoAP.Types, Network.CoAP.MessageCodec, Network.CoAP.Messaging
 
-  build-depends:       base,
-                       bytestring,
-                       binary,
-                       network,
-                       stm,
-                       mtl,
-                       time,
-                       random,
-                       async
+  build-depends:       base >= 4.8 && < 4.9,
+                       bytestring >= 0.10 && < 0.11,
+                       binary >= 0.7 && < 0.8,
+                       network >= 2.6 && < 2.7,
+                       stm >= 2.4 && < 2.5,
+                       mtl >= 2.2 && < 2.3,
+                       time >= 1.5 && < 1.6,
+                       random >= 1.1 && < 1.2,
+                       async >= 2.1 && < 2.2
   hs-source-dirs:      src
   default-language:    Haskell2010
 
