--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -45,6 +45,7 @@ test-suite hcoap-test
                     QuickCheck,
                     HUnit,
                     random,
+                    async,
                     bytestring
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
