--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -31,7 +31,8 @@ library
                        mtl >= 2.2 && < 2.3,
                        time >= 1.5 && < 1.6,
                        random >= 1.1 && < 1.2,
-                       async >= 2.1 && < 2.2
+                       async >= 2.1 && < 2.2,
+                       network-uri >= 2.6 && < 3
   hs-source-dirs:      src
   default-language:    Haskell2010
 
