--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -21,7 +21,7 @@ extra-doc-files:     README.md
 
 library
   exposed-modules: Network.CoAP.Server, Network.CoAP.Client, Network.CoAP.Message, Network.CoAP.Transport
-  other-modules: Network.CoAP.Types, Network.CoAP.MessageCodec, Network.CoAP.Messaging
+  other-modules: Network.CoAP.Types, Network.CoAP.MessageCodec, Network.CoAP.Messaging, Network.CoAP.Internal
 
   build-depends:       base >= 4 && < 5,
                        bytestring >= 0.10 && < 0.11,
@@ -32,7 +32,9 @@ library
                        time >= 1.5 && < 1.6,
                        random >= 1.1 && < 1.2,
                        async >= 2.1 && < 2.2,
-                       network-uri >= 2.6 && < 3
+                       network-uri >= 2.6 && < 3,
+                       iproute >= 1.7 && < 2,
+                       dns >= 2 && < 3
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -58,6 +60,7 @@ executable hcoap-example-server
   build-depends:       base,
                        network,
                        bytestring,
+                       network-uri,
                        hcoap
   default-language:    Haskell2010
 
@@ -68,6 +71,7 @@ executable hcoap-example-client
   build-depends:       base,
                        network,
                        bytestring,
+                       network-uri,
                        hcoap
   default-language:    Haskell2010
 
