--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -53,6 +53,17 @@ test-suite hcoap-test
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
 
+executable hcoap-interop-server
+  hs-source-dirs:      interop-test/server
+  main-is:             Main.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base,
+                       network,
+                       bytestring,
+                       network-uri,
+                       hcoap
+  default-language:    Haskell2010
+
 executable hcoap-example-server
   hs-source-dirs:      example-server
   main-is:             Main.hs
