--- a/hcoap.cabal
+++ b/hcoap.cabal
@@ -1,4 +1,4 @@
-copyright:           Copyright (c) 2016, Ulf Lilleengen
+copyright:           Copyright (c) 2016-2020, Ulf Lilleengen
 name:                hcoap
 version:             0.1.2.1
 synopsis:            Library for handling CoAP protocol
@@ -23,17 +23,17 @@ library
   other-modules: Network.CoAP.Types, Network.CoAP.MessageCodec, Network.CoAP.Messaging, Network.CoAP.Internal
 
   build-depends:       base >= 4 && < 5,
-                       bytestring >= 0.10 && < 0.11,
-                       binary >= 0.8 && < 0.9,
-                       network >= 2.6 && < 2.7,
-                       stm >= 2.4 && < 2.5,
-                       mtl >= 2.1 && < 2.3,
-                       time >= 1.8 && < 1.9,
-                       random >= 1.1 && < 2,
-                       async >= 2.0 && < 3,
-                       network-uri >= 2.6 && < 3,
-                       iproute >= 1.3 && < 2,
-                       dns >= 3 && < 4
+                       bytestring >= 0.10,
+                       binary >= 0.8,
+                       network >= 2.6,
+                       stm >= 2.4,
+                       mtl >= 2.1,
+                       time >= 1.8,
+                       random >= 1.1,
+                       async >= 2.0,
+                       network-uri >= 2.6,
+                       iproute >= 1.3,
+                       dns >= 3
   hs-source-dirs:      src
   default-language:    Haskell2010
 
